Fixed some width issues on mobile banner scroll

--- a/events/styles/events_style.css
+++ b/events/styles/events_style.css
@@ -92,7 +92,8 @@ h2 {
     position: absolute;
     top: 50%;
     left: 50%;
-    max-width: 800px;
+    max-width: 500px;
+    width: 70%;
     transform: translate(-50%, -50%);
 
     background-color: var(--theme-primary-color);
